--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NewsApp</string>
+    <string name="preference_key">NewsApp_PreferenceKey</string>
+    <string name="enable_dynamicColorState_key">NewsApp_PreferenceKey</string>
 </resources>
